--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,8 +5,8 @@
           Facilities
         </a>
         <div class="dropdown-menu" aria-labelledby="facilities">
-          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=free_weights_room">Free Weight Gym</a>
-          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=cardio_gym">Cardio Gym</a>
+          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=weights_room">Weight Rooms</a>
+          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=cardio_gym">Cardio Rooms</a>
           <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=cafe_coffee">Café</a>
         </div>
       </li>
