--- a/facilities/templates/facilities/freeweights.html
+++ b/facilities/templates/facilities/freeweights.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="{% static 'facilities/css/facility.css' %}">
 {% endblock %}
 
-
-
-
 <!--empty header container-->
 {% block page_header %}
 <div class="container header-container">
@@ -31,7 +28,7 @@
     </div>
     <div class="row">
         {% for facility in facilities %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
             <div class="card-deck mt-3 mb-3">
                 <div class="card">
                         {% if facility.image %}
@@ -42,7 +39,8 @@
                     <div class="card-body">
                         <h5>{{ facility.name }}</h5>
                         <p>{{ facility.description }}</p>
-                        <p class="testimonials">Testimonials: {{ facility.testimonial }}</p>
+                        <h7>Testimonial:</h7>
+                        <p class="testimonials">{{ facility.testimonial }}</p>
                         <p>Current Rating: {{ facility.rating }}/5</p>
                         <a href="{% url 'products' %}?category=online_membership,public_membership,corporate_membership,membership_student" class="btn buy-now-button">Buy Membership</a>
                     </div>
