--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -22,7 +22,7 @@
     <div class="row">
         {% for product in products %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="card-deck">
+            <div class="card-deck mt-3 mb-3">
                 <div class="card">
                     {% if product.image %}
                     <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
