--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -33,7 +33,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-lean" href="#">Coaches</a>
+        <a class="nav-link text-lean" href="{% url 'coach' %}">Coaches</a>
       </li>
     </ul>
     
