--- a/coach/templates/coaches/coach.html
+++ b/coach/templates/coaches/coach.html
@@ -14,15 +14,28 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100"> 
-        <div class="col-7 col-md-6 my-auto">
-            <div class="my-5">
-                <h4>
-                    <a href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates,online_membership,public_membership,corporate_membership,membership_student" class="gym-now-button btn-lg rounded-0 text-uppercase py-3">Welcome to the Coaches Page </a>
-                </h4>
-            </div>
-        </div> 
+<div class="overlay"></div>
+<!--Card from W3 school profile card-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+<!---Coach Profile-->
+        <div class="card">
+            {% if facility.image %}
+            <img src="{{ facility.image.url }}" alt="{{ facility.name }}" style="width:100%">
+            {% else %}
+            <img src="{{ MEDIA_URL }}noimage.jpg"  alt="{{ facility.name }}" style="width:100%">
+            {% endif %}
+        <h1>John Doe</h1>
+            <p class="title">CEO & Founder, Example</p>
+            <p>Harvard University</p>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/andrew_burns_moves/"><i class="fa fa-facebook"></i></a>
+            <p><button>Contact</button></p>
+        </div>
     </div>
 </div>
 
