--- a/templates/base.html
+++ b/templates/base.html
@@ -154,8 +154,7 @@
     {% block content %}
     {% endblock %}
 
-
-    <footer class="sticky-bottom">
+    <footer class="footer mt-auto py-3">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 mt-2">
