--- a/static/css/base.css
+++ b/static/css/base.css
@@ -282,16 +282,17 @@ button {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000;
+  background-color:#1a1a1a ;
   text-align: center;
   cursor: pointer;
   width: 100%;
+  height:100%;
   font-size: 18px;
 }
 
-a {
+.card-social a {
   text-decoration: none;
-  font-size: 22px;
+  font-size: 18px;
   color: black;
 }
 
