--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -6,7 +6,7 @@
     <div class="toast" role="alert" data-delay="10000" aria-live="assertive" aria-atomic="true">
         <div class="arrow-up arrow-success"></div>
         <div class="w-100 toast-capper bg-success"></div>
-        <div class="toast-header">
+        <div class="toast-header d-flex justify-content-center">
             <strong class="mr-auto">Success !!!</strong>
             <small>Temple Lean <i class="fas fa-dumbbell fa-sm"></i></small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
