--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -30,7 +30,12 @@
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy }}
+                {% for field in form %}
+                {% if field.name != 'image' %}
+                    {{ field | as_crispy_field }}
+                {% else %}
+                    {{ field }}
+                {% endif %}
                 <div class="text-right">
                     <a class="btn cancel-button rounded-0" href="{% url 'products' %}">Cancel <i class="fas fa-window-close"></i></a>
                     <button class="btn add-class rounded-0" type="submit">Add Product <i class="far fa-plus-square"></i></button>
@@ -39,4 +44,14 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
