--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -28,15 +28,34 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+                enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy }}
+                {% for field in form %}
+                {% if field.name != 'image' %}
+                    {{ field | as_crispy_field }}
+                {% else %}
+                    {{ field }}
+                {% endif %}
+                {% endfor %}
                 <div class="text-right">
-                    <a class="btn cancel-button rounded-0" href="{% url 'products' %}">Cancel <i class="fas fa-window-close"></i></a>
-                    <button class="btn add-class rounded-0" type="submit">Update Product <i class="fas fa-edit"></i></button>
+                    <a class="btn cancel-button rounded-0" href="{% url 'products' %}">Cancel <i
+                            class="fas fa-window-close"></i></a>
+                    <button class="btn add-class rounded-0" type="submit">Update Product <i
+                            class="fas fa-edit"></i></button>
                 </div>
             </form>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
