--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,13 +15,17 @@
     <div class="card mb-3">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                {% if product.image %}
-                <a href="{{ product.image.url }}" target="_blank">
-                    <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <img src="{{ MEDIA_URL }}noimage.jpg" class="img-fluid" alt="{{ product.name }}">
-                {% endif %}
+                <div class="image-container my-5">
+                    {% if product.image %}
+                    <a href="{{ product.image.url }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </a>
+                    {% else %}
+                    <a href="">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                    </a>
+                    {% endif %}
+                </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card-body">
@@ -42,9 +46,9 @@
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
-                                            <input class="form-control qty_input text-center" type="number" name="quantity"
-                                                value="1" min="1" max="99" data-item_id="{{ product.id }}"
-                                                id="id_qty_{{ product.id }}">
+                                            <input class="form-control qty_input text-center" type="number"
+                                                name="quantity" value="1" min="1" max="99"
+                                                data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
                                                 <button class="increment-qty btn .buy-now-button rounded-0"
                                                     data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
