--- a/static/css/base.css
+++ b/static/css/base.css
@@ -268,7 +268,7 @@ footer {
     border-color: #222;
 }
 
-/*--Facility card Flip CSS--*/
+/*--Facility--*/
 
 p .testimonials{
     font-style: italic;
@@ -311,6 +311,33 @@ button:hover, a:hover {
   opacity: 0.7;
 }
 
+
+/* Product Form */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #f73668;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color:#f73668;
+    border-color:#f73668;
+    border-radius: 0;
+}
 
 /*--Media Queries--*/
 
