css debug of coach profile button commenced removed button element and added class

--- a/coach/templates/coaches/coach.html
+++ b/coach/templates/coaches/coach.html
@@ -42,7 +42,7 @@
                 <a class="card-social" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a class="card-social" href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
                         target="_blank"><i class="fab fa-youtube"></i></a>
-            <p><button><a href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates,online_membership,public_membership,corporate_membership,membership_student">Buy Class/Membership</a></button></p>
+            <p><a class ="coach-profile-button btn btn-block" href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates,online_membership,public_membership,corporate_membership,membership_student">Buy Class/Membership</a></p>
             </div>
         </div>
         {% endfor %}
