coach card refined with text center class

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,14 +275,14 @@ p .testimonials{
 }
 
 /*--Coach Page CSS--*/
-.coach-card {
+.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  max-width: auto;
   margin: auto;
   text-align: center;
 }
 
-.coach-title {
+.role {
   color: grey;
   font-size: 18px;
 }
