--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,7 +30,9 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">Description</p>
                     <p class="card-text">{{ product.description }}</p>
+                    <p class="card-text">Price</p>
                     <p class="card-text">€{{ product.price }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
@@ -79,11 +81,10 @@
                                                 class="buy-now-button btn-lg rounded-0 text-uppercase mt-5"
                                                 value="Add to Bag">
                                             <hr>
-                                            <a href="{% url 'products' %}" class="btn-secondary btn-lg rounded-0 mt-5">
-                                                <span class="icon">
-                                                    <i class="fas fa-chevron-left btn-secondary"></i>
-                                                </span>
-                                                <span class="text-uppercase">Keep Shopping</span>
+                                            <a href="{% url 'products' %}"
+                                                class="btn-secondary btn-sm rounded-0 mt-5 text-uppercase">
+                                                <i class="fas fa-chevron-left fa-sm btn-secondary"></i>
+                                                Keep Shopping
                                             </a>
                                         </div>
                                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
