--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,6 +89,12 @@ a:hover {
     min-width: 260px;
 }
 
+/*---Increment counter--*/
+.small-buy-now-button{
+    background: #80C4FF;
+    color:#1a1a1a;
+}
+
 .gym-now-button:hover{
     background:#1a1a1a;
     color:#80C4FF;
