--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,7 +89,7 @@ a:hover {
     min-width: 260px;
 }
 
-/*---Increment counter--*/
+/*---Increment counter on product details page--*/
 .small-buy-now-button{
     background: #80C4FF;
     color:#1a1a1a;
