--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -64,8 +64,7 @@
                                         <div class="form-row">
                                             {% with product.has_days as s %}
                                             {% if s %}
-                                            <div class="col-12">
-                                                <hr>
+                                            <div class="col-12 mt-3">
                                                 <p><strong>Day:</strong></p>
                                                 <select class="form-control rounded-0 w-100 justify-content-center" name="product_days"
                                                     id="id_product_days">
