--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -20,8 +20,9 @@
 {% endblock %}
 
 {% block content %}
+<!--white background overlay div-->
 <div class="overlay"></div>
-
+<!--Top header of Checkout Success page-->
 <div class="container mb-2">
     <div class="row">
         <div class="col">
@@ -32,7 +33,7 @@
                 <strong> {{order.email}}</strong></p>
         </div>
     </div>
-
+<!--Main body of checkout success page-->
     <div class="row">
         <div class="col-12 col-lg-7">
             <div class="order-confirmation-wrapper p-2 border">
